--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "scripts": {
         "compile": "hardhat compile",
-        "test": "hardhat test",
+        "test": "cross-env NODE_ENV=test hardhat test",
         "deploy": "hardhat deploy",
         "node": "hardhat node",
         "lint:fix": "prettier --write 'scripts/**/*.{js,ts}' 'test/**/*.{js,ts}' 'tasks/**/*.{js,ts}' && tslint --fix --config tslint.json --project tsconfig.json && solhint contracts/**/*.sol",
@@ -21,11 +21,12 @@
     "author": "Kristjan Kosic <kristjan@protokol.com>",
     "license": "MIT",
     "devDependencies": {
+        "@balancer-labs/typechain": "^1.0.0",
         "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.11",
         "@nomiclabs/hardhat-etherscan": "2.1.7",
         "@nomiclabs/hardhat-solhint": "2.0.0",
         "@nomiclabs/hardhat-web3": "2.0.0",
-        "@openzeppelin/contracts": "4.3.2",
+        "@openzeppelin/contracts": "^4.4.0",
         "@pinata/sdk": "1.1.23",
         "@typechain/ethers-v5": "^7.2.0",
         "@typechain/hardhat": "^2.3.1",
@@ -37,6 +38,7 @@
         "chai-bignumber": "3.0.0",
         "chai-bn": "0.3.0",
         "chai-ethers": "0.0.1",
+        "cross-env": "^7.0.3",
         "dotenv": "10.0.0",
         "ethers": "5.5.1",
         "hardhat": "2.6.7",
@@ -61,6 +63,10 @@
         "timeout": 10000000
     },
     "dependencies": {
+        "@balancer-labs/v2-pool-utils": "^2.0.1",
+        "@balancer-labs/v2-pool-weighted": "^2.0.1",
+        "@balancer-labs/v2-solidity-utils": "^2.0.0",
+        "@balancer-labs/v2-vault": "^2.0.0",
         "@defi-wonderland/smock": "^2.0.7",
         "@ethersproject/providers": "^5.5.1",
         "hardhat-abi-exporter": "^2.3.1"
