--- a/package.json
+++ b/package.json
@@ -28,16 +28,19 @@
         "@nomiclabs/hardhat-etherscan": "2.1.7",
         "@nomiclabs/hardhat-solhint": "2.0.0",
         "@nomiclabs/hardhat-web3": "2.0.0",
-        "@openzeppelin/contracts": "^4.4.0",
+        "@openzeppelin/contracts": "^4.4.1",
         "@pinata/sdk": "1.1.23",
         "@typechain/ethers-v5": "^7.2.0",
         "@typechain/hardhat": "^2.3.1",
         "@types/chai": "4.2.22",
+        "@types/chai-as-promised": "^7.1.4",
         "@types/mocha": "9.0.0",
         "@types/node": "16.4.10",
+        "@uniswap/lib": "^4.0.1-alpha",
         "@uniswap/v2-core": "^1.0.1",
         "babel-eslint": "10.1.0",
         "chai": "4.3.4",
+        "chai-as-promised": "^7.1.1",
         "chai-bignumber": "3.0.0",
         "chai-bn": "0.3.0",
         "chai-ethers": "0.0.1",
