--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "timeout": 10000000
     },
     "dependencies": {
+        "@balancer-labs/sor": "github:beethovenxfi/balancer-sor#beethovenx-master",
         "@balancer-labs/v2-pool-utils": "^2.0.1",
         "@balancer-labs/v2-pool-weighted": "^2.0.1",
         "@balancer-labs/v2-solidity-utils": "^2.0.0",
@@ -76,8 +77,6 @@
         "@defi-wonderland/smock": "^2.0.7",
         "@ethersproject/providers": "^5.5.1",
         "@hovoh/spookyswap-core": "^1.1.0",
-        "hardhat-abi-exporter": "^2.3.1",
-        "i": "^0.3.7",
-        "npm": "^8.3.0"
+        "hardhat-abi-exporter": "^2.3.1"
     }
 }
