--- a/package.json
+++ b/package.json
@@ -41,11 +41,9 @@
         "babel-eslint": "10.1.0",
         "chai": "4.3.4",
         "chai-as-promised": "^7.1.1",
-        "chai-bignumber": "3.0.0",
-        "chai-bn": "0.3.0",
-        "chai-ethers": "0.0.1",
         "cross-env": "^7.0.3",
         "dotenv": "10.0.0",
+        "ethereum-waffle": "^3.0.0",
         "ethers": "5.5.1",
         "hardhat": "2.6.7",
         "hardhat-deploy": "0.9.4",
@@ -77,6 +75,7 @@
         "@defi-wonderland/smock": "^2.0.7",
         "@ethersproject/providers": "^5.5.1",
         "@hovoh/spookyswap-core": "^1.1.0",
+        "@nomiclabs/hardhat-waffle": "^2.0.1",
         "hardhat-abi-exporter": "^2.3.1"
     }
 }
