--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
         "@nomiclabs/hardhat-etherscan": "2.1.7",
         "@nomiclabs/hardhat-solhint": "2.0.0",
         "@nomiclabs/hardhat-web3": "2.0.0",
-        "@openzeppelin/contracts": "^4.4.1",
         "@pinata/sdk": "1.1.23",
         "@typechain/ethers-v5": "^7.2.0",
         "@typechain/hardhat": "^2.3.1",
@@ -36,8 +35,6 @@
         "@types/chai-as-promised": "^7.1.4",
         "@types/mocha": "9.0.0",
         "@types/node": "16.4.10",
-        "@uniswap/lib": "^4.0.1-alpha",
-        "@uniswap/v2-core": "^1.0.1",
         "babel-eslint": "10.1.0",
         "chai": "4.3.4",
         "chai-as-promised": "^7.1.1",
@@ -72,10 +69,14 @@
         "@balancer-labs/v2-pool-weighted": "^2.0.1",
         "@balancer-labs/v2-solidity-utils": "^2.0.0",
         "@balancer-labs/v2-vault": "^2.0.0",
+        "@chainlink/contracts": "^0.4.0",
         "@defi-wonderland/smock": "^2.0.7",
         "@ethersproject/providers": "^5.5.1",
         "@hovoh/spookyswap-core": "^1.1.0",
         "@nomiclabs/hardhat-waffle": "^2.0.1",
+        "@openzeppelin/contracts": "^4.4.1",
+        "@uniswap/lib": "^4.0.1-alpha",
+        "@uniswap/v2-core": "^1.0.1",
         "hardhat-abi-exporter": "^2.3.1"
     }
 }
