--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@types/chai-as-promised": "^7.1.4",
         "@types/mocha": "9.0.0",
         "@types/node": "16.4.10",
+        "axios": "^0.26.0",
         "babel-eslint": "10.1.0",
         "chai": "4.3.4",
         "chai-as-promised": "^7.1.1",
