--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "dist/sdk/index.d.ts",
     "husky": {
       "hooks": {
-        "pre-commit": "npm run format"
+        "pre-commit": "npm run format:fix"
       }
     },
     "scripts": {
